--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -11,8 +11,24 @@
 @import "forms";
 @import "navigation";
 @import "footer";
-@import "cloudcannon";
 @import "fontawesome";
-@import "regular";
+//@import "regular";
 @import "solid";
-@import "bootstrap/bootstrap";
+//@import "bootstrap/bootstrap";
+@import "bootstrap/functions";
+@import "bootstrap/variables";
+@import "bootstrap/mixins";
+@import "bootstrap/utilities";
+@import "bootstrap/root";
+@import "bootstrap/reboot";
+@import "bootstrap/type";
+@import "bootstrap/images";
+@import "bootstrap/containers";
+@import "bootstrap/grid";
+@import "bootstrap/tables";
+@import "bootstrap/forms";
+@import "bootstrap/buttons";
+@import "bootstrap/badge";
+@import "bootstrap/list-group";
+@import "bootstrap/helpers";
+@import "bootstrap/utilities/api";
