--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	{% seo %}
-
+	
+	<link rel="preload" href="{{ site.baseurl }}/assets/webfonts/fa-solid-900.woff2" as="font" type="font/woff2" crossorigin>
 	<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/screen.css">
-	<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/custom.css">
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 
-	<link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+	<link rel="stylesheet" href="https://unpkg.com/swiper@7.0.8/swiper-bundle.min.css" />
 </head>
 
 <body>
